Updating webpack build config

--- a/package.json
+++ b/package.json
@@ -5,9 +5,24 @@
   "repository": "git@github.com:SylvainMarty/cdn-test.git",
   "author": "Sylvain Marty <10723351+SylvainMarty@users.noreply.github.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "file-loader": "^2.0.0",
     "github-release-cli": "^0.4.1",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1"
-  }
+    "webpack-cli": "^3.1.1",
+    "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {}
 }
